test/Fail/Issue4881b.agda
_ : Set
_ : Set → Set
